<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SLIMs-master</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lable_write_nfc_latitude">Latitude :</string>
    <string name="lable_write_nfc_logitude">Logitude :</string>
    <string name="lable_write_nfc_heading">Heading :</string>
    <string name="lable_write_nfc_floor">Floor code :</string>
    <string name="lable_write_nfc_building">Building code :</string>
    <string name="btn_write_nfc_write2tag">Write to Tag !</string>
    <string name="write_nfc_nodename">Node Name :</string>
    <string name="lable_scan_qr_code_btn">Scan QR Code</string>
    
    
     <string name="filter_settings">Filters</string>
    <string name="filter_help">Help</string>
    <string name="filter_label">Filter</string>
    <string name="hello_world">Hello world!</string>
    <string name="acceleration_name">Acceleration</string>
    <string name="input_name">Input</string>
    <string name="lpf_name">LPF</string>
    <string name="lpf_wiki_name">LPFWiki</string>
    <string name="lpf_and_dev_name">LPFAndDev</string>
    <string name="sensor_name">Sensor</string>
    <string name="developer_url">KircherElectronics.com</string>
    <string name="log_data_label">Log Data</string>
    <string name="default_value">0.00</string>
    <string name="rms_accel_label">RMS Accel:</string>
    <string name="rms_wiki_label">RMS Wiki:</string>
    <string name="rms_and_dev_label">RMS AndDev:</string>
    <string name="rms_static">RMS Static:</string>
    <string name="rms_dynamic">RMS Dynamic:</string>
    <string name="dynamic_alpha">Dynamic Alpha</string>
    <string name="static_alpha">Static Alpha:</string>
    <string name="plot_filter">Plot Filter</string>
    <string name="window_size">Window Size:</string>

</resources>