<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/slims_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/write_nfc_latitude_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lable_write_nfc_latitude" />

        <EditText
            android:id="@+id/write_nfc_latitude_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/write_nfc_longitude_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lable_write_nfc_logitude" />

        <EditText
            android:id="@+id/write_nfc_logitude_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lable_write_nfc_building" />

        <EditText
            android:id="@+id/write_nfc_builing_code_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/write_nfc_floor_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lable_write_nfc_floor" />

        <EditText
            android:id="@+id/write_nfc_floor_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/write_nfc_heading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lable_write_nfc_heading" />

        <EditText
            android:id="@+id/write_nfc_heading_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/write_nfc_nodename_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_nfc_nodename" />

        <EditText
            android:id="@+id/write_nfc_nodename_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/write_nfc_nodecode_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Node Code :" />

        <EditText
            android:id="@+id/write_nfc_nodecode_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/write_nfc_distance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Distance :" />

        <EditText
            android:id="@+id/write_nfc_distance_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

    <Button
        android:id="@+id/write_nfc_write2Tag_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_write_nfc_write2tag" />

    <TextView
        android:id="@+id/write_nfc_message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>